Fix search box contents overflowing and causing Blink83 to scroll the div

--- a/files/web/static/css/cr.css
+++ b/files/web/static/css/cr.css
@@ -389,6 +389,7 @@ img.blur {
 
 .bs-searchbox>input {
 	margin-left: 38px !important;
+	width: calc(100% - 38px) !important;
 }
 
 /* Improve display of resizable textarea inside update card */
